@@ -326,6 +326,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #13235: Added PendingDeprecationWarning to warn() method and function.
+
 - Issue #9168: now smtpd is able to bind privileged port.
 
 - Issue #12529: fix cgi.parse_header issue on strings with double-quotes and
